--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
             color: white;
             font-size: 16px;
             font-weight: bold;
-            transition: background-color 0.2s;
+            transition: background-color 0.2s, opacity 0.2s;
             margin-left: 10px;
         }
         button:hover {
             background-color: #0056b3;
+        }
+        button:disabled {
+            background-color: #999;
+            cursor: not-allowed;
+            opacity: 0.7;
         }
         .delete-btn {
             background-color: #dc3545;
@@ -89,14 +94,14 @@
         <header class="header">
             <h1>토론의 장 🚀</h1>
             <div>
-                <button id="create-room-btn">새 토론방 만들기</button>
+                <button id="create-room-btn" disabled>새 토론방 만들기</button>
                 <button id="ai-analysis-btn">AI 분석 테스트</button>
             </div>
         </header>
     
         <main id="room-list">
             <h2>진행중인 토론</h2>
-            </main>
+        </main>
 
         <section id="ai-result-container">
             <h2>🤖 AI 분석 결과</h2>
@@ -105,7 +110,8 @@
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script> <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js"></script>
 
     <script src="index.js"></script>
