--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
         }
-        h1 {
-            margin: 0;
-            margin-bottom: 10px;
-        }
+        h1 { margin: 0; }
         button { 
             padding: 10px 20px; 
             cursor: pointer; 
@@ -39,11 +35,8 @@
             font-size: 16px;
             font-weight: bold;
             transition: background-color 0.2s, opacity 0.2s;
-            margin-left: 10px;
         }
-        button:hover {
-            background-color: #0056b3;
-        }
+        button:hover { background-color: #0056b3; }
         button:disabled {
             background-color: #999;
             cursor: not-allowed;
@@ -51,16 +44,9 @@
         }
         .delete-btn {
             background-color: #dc3545;
+            margin-left: 10px;
         }
-        .delete-btn:hover {
-            background-color: #c82333;
-        }
-        #ai-analysis-btn {
-            background-color: #28a745;
-        }
-        #ai-analysis-btn:hover {
-            background-color: #218838;
-        }
+        .delete-btn:hover { background-color: #c82333; }
         .room-card { 
             background-color: white;
             border: 1px solid #ddd; 
@@ -68,24 +54,13 @@
             margin-bottom: 15px; 
             border-radius: 8px; 
             box-shadow: 0 1px 3px rgba(0,0,0,0.12);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        .room-card h3 {
-            margin-top: 0;
-        }
-        #ai-result-container {
-            margin-top: 30px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-        }
-        pre {
-            background-color: #e9ecef;
-            padding: 15px;
-            border-radius: 5px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
+        .room-card-info { flex-grow: 1; }
+        .room-card-info h3 { margin: 0 0 5px 0; }
+        .room-card-info p { margin: 0; color: #666; }
     </style>
 </head>
 <body>
@@ -93,26 +68,17 @@
     <div class="container">
         <header class="header">
             <h1>토론의 장 🚀</h1>
-            <div>
-                <button id="create-room-btn" disabled>새 토론방 만들기</button>
-                <button id="ai-analysis-btn">AI 분석 테스트</button>
-            </div>
+            <button id="create-room-btn" disabled>새 토론방 만들기</button>
         </header>
     
         <main id="room-list">
             <h2>진행중인 토론</h2>
         </main>
-
-        <section id="ai-result-container">
-            <h2>🤖 AI 분석 결과</h2>
-            <pre id="ai-result">AI 분석 테스트 버튼을 눌러주세요.</pre>
-        </section>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-functions.js"></script>
 
     <script src="index.js"></script>
 
