--- a/index.html
+++ b/index.html
@@ -4,83 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>토론의 장</title>
-    <style>
-        body { 
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: #f0f2f5;
-            color: #1c1e21;
-            padding: 20px; 
-            margin: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .header { 
-            border-bottom: 2px solid #ddd; 
-            padding-bottom: 15px; 
-            margin-bottom: 25px; 
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        h1 { margin: 0; }
-        button { 
-            padding: 10px 20px; 
-            cursor: pointer; 
-            border: none;
-            border-radius: 6px;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            transition: background-color 0.2s, opacity 0.2s;
-        }
-        button:hover { background-color: #0056b3; }
-        button:disabled {
-            background-color: #999;
-            cursor: not-allowed;
-            opacity: 0.7;
-        }
-        .delete-btn {
-            background-color: #dc3545;
-            margin-left: 10px;
-        }
-        .delete-btn:hover { background-color: #c82333; }
-        .room-card { 
-            background-color: white;
-            border: 1px solid #ddd; 
-            padding: 20px; 
-            margin-bottom: 15px; 
-            border-radius: 8px; 
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .room-card-info { flex-grow: 1; }
-        .room-card-info h3 { margin: 0 0 5px 0; }
-        .room-card-info p { margin: 0; color: #666; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
         <header class="header">
             <h1>토론의 장 🚀</h1>
             <button id="create-room-btn" disabled>새 토론방 만들기</button>
         </header>
-    
         <main id="room-list">
             <h2>진행중인 토론</h2>
         </main>
     </div>
-
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
     <script src="index.js"></script>
-
 </body>
 </html>
