--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
     <div class="auth-container">
         <h2>토론의 장 로그인</h2>
         <form id="login-form" class="auth-form">
-            <input type="email" id="email" placeholder="이메일" required>
+            <input type="email" id="email" placeholder="아이디(닉네임)" required>
             <input type="password" id="password" placeholder="비밀번호" required>
             <div class="auth-buttons">
                 <button type="submit">로그인</button>
@@ -50,4 +50,5 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="login.js"></script>
 </body>
+
 </html>
