--- a/room.html
+++ b/room.html
@@ -9,20 +9,24 @@
 <body>
     <div class="container room-container">
         <header class="room-header">
+            <div class="header-buttons">
+                <button id="toggle-memo-btn">메모장</button>
+                <button id="leave-room-btn">나가기</button>
+            </div>
             <h1 id="room-topic">...</h1>
             <p id="room-owner-info"></p>
             <div id="nickname-area"></div>
             <div id="owner-controls"></div>
         </header>
         <div class="main-content">
-            <section class="chat-section">
+            <section class="chat-section" id="chat-section">
                 <main class="chat-window" id="chat-window"></main>
                 <footer class="chat-input-area">
                     <input type="text" id="chat-input" placeholder="메시지를 입력하세요..." autocomplete="off">
                     <button id="send-btn">전송</button>
                 </footer>
             </section>
-            <section class="memo-section">
+            <section class="memo-section" id="memo-section">
                 <div class="memo-tabs">
                     <button id="personal-memo-btn" class="active">개인 메모</button>
                     <button id="shared-memo-btn">공유 메모</button>
