--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
                     <label><input type="checkbox" id="is-private-checkbox"> 비공개 방 (링크로만 입장 가능)</label>
                 </div>
                 <div style="display: flex; gap: 10px; justify-content: flex-end;">
-                    <button type="button" id="cancel-create-btn">취소</button>
+                    <button type="button" class="cancel-btn">취소</button>
                     <button type="submit">만들기</button>
                 </div>
             </form>
         </div>
     </div>
-    </body>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="index.js"></script>
+</body>
 </html>
