--- a/room.html
+++ b/room.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="modal-overlay" id="room-settings-modal" style="display: none;">
+    <div class="modal-overlay" id="room-settings-modal">
         <div class="modal-content">
             <h2>방 설정</h2>
             <form id="room-settings-form">
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="modal-overlay" id="role-assignment-modal" style="display: none;">
+    <div class="modal-overlay" id="role-assignment-modal">
         <div class="modal-content">
             <h2 id="role-assignment-title">역할 할당</h2>
             <form id="role-assignment-form">
@@ -79,7 +79,7 @@
         </div>
     </div>
     
-    <div class="modal-overlay" id="ai-result-modal" style="display: none;">
+    <div class="modal-overlay" id="ai-result-modal">
         <div class="modal-content">
             <h2>AI 분석 결과</h2>
             <pre id="ai-result-content" style="white-space: pre-wrap; max-height: 60vh; overflow-y: auto;"></pre>
