--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <label><input type="checkbox" id="is-private-checkbox"> 비공개 방 (링크로만 입장 가능)</label>
                 </div>
-                <div style="display: flex; gap: 10px; justify-content: flex-end;">
+                <div class="modal-footer">
                     <button type="button" id="cancel-create-btn">취소</button>
                     <button type="submit">만들기</button>
                 </div>
