--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
                 <button id="logout-btn" style="display: none;">로그아웃</button>
             </div>
         </header>
-        <main id="room-list">
+        <main>
             <h2>진행중인 토론</h2>
+            <div id="room-list"></div>
+
+            <h2 style="margin-top: 40px;">결론이 난 토론</h2>
+            <div id="concluded-room-list"></div>
         </main>
     </div>
 
